--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logos/nss_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nss-bitm</title>
+    <title>NSS BIT MESRA</title>
   </head>
   <body>
     <div id="root"></div>
